GearsetPOC/force-app/main/default/objects/Case/fields/Access_Personal_Data__c.field-meta.xml
<CustomField>
    <fullName>Access_Personal_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Personal Data</label>
    <type>Checkbox</type>
</CustomField>