GearsetPOC/force-app/main/default/objects/Case/fields/Account_Branch__c.field-meta.xml
<CustomField>
    <fullName>Account_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Branch</label>
    <referenceTo>Account_Branches__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>