GearsetPOC/force-app/main/default/objects/Case/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Account Name</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>After Sales</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>