GearsetPOC/force-app/main/default/objects/Case/fields/Actions_Taken_Advice_Given__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken_Advice_Given__c</fullName>
    <label>Actions Taken / Advice Given</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>