GearsetPOC/force-app/main/default/objects/Case/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Additional Notes to the Group Booking</description>
    <inlineHelpText>Additional Notes to the Group Booking</inlineHelpText>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>