GearsetPOC/force-app/main/default/objects/Case/fields/ADDITIONAL_PAYMENT_RECEIPT__c.field-meta.xml
<CustomField>
    <fullName>ADDITIONAL_PAYMENT_RECEIPT__c</fullName>
    <label>***ADDITIONAL PAYMENT RECEIPT***</label>
    <length>1</length>
    <type>Text</type>
</CustomField>