GearsetPOC/force-app/main/default/objects/Case/fields/Additional_PNR_s__c.field-meta.xml
<CustomField>
    <fullName>Additional_PNR_s__c</fullName>
    <label>Additional PNR(s)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>