GearsetPOC/force-app/main/default/objects/Case/fields/Address_Details__c.field-meta.xml
<CustomField>
    <fullName>Address_Details__c</fullName>
    <label>Address Details</label>
    <type>TextArea</type>
</CustomField>