GearsetPOC/force-app/main/default/objects/Case/fields/Adults_Number__c.field-meta.xml
<CustomField>
    <fullName>Adults_Number__c</fullName>
    <label>Adults Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>