GearsetPOC/force-app/main/default/objects/Case/fields/Affected_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Affected_Tickets__c</fullName>
    <label>Affected Tickets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>