GearsetPOC/force-app/main/default/objects/Case/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Case age in hours</description>
    <formula>(NOW()-CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>