GearsetPOC/force-app/main/default/objects/Case/fields/Age_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Case__c</fullName>
    <label>Webhelp Escalation SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within SLA</fullName>
            </value>
            <value>
                <fullName>Approaching SLA Limit (1 - 2 Hours)</fullName>
            </value>
            <value>
                <fullName>Over SLA (2 hours+)</fullName>
            </value>
            <value>
                <fullName>Approaching SLA Limit (18 - 24 Hours)</fullName>
            </value>
            <value>
                <fullName>Over SLA (24 hours+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>