GearsetPOC/force-app/main/default/objects/Case/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>