GearsetPOC/force-app/main/default/objects/Case/fields/All_Articles_String__c.field-meta.xml
<CustomField>
    <fullName>All_Articles_String__c</fullName>
    <label>All Articles String</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>