GearsetPOC/force-app/main/default/objects/Case/fields/Allow_Re_submission__c.field-meta.xml
<CustomField>
    <fullName>Allow_Re_submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Re-submission</label>
    <type>Checkbox</type>
</CustomField>