GearsetPOC/force-app/main/default/objects/Case/fields/Alternative_Disruption__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Disruption__c</fullName>
    <label>Alternative Disruption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Poor Service</fullName>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Covid - Refunds or exchanges</fullName>
            </value>
            <value>
                <fullName>Covid - Vouchers</fullName>
            </value>
            <value>
                <fullName>Covid - Information and communication</fullName>
            </value>
            <value>
                <fullName>Covid - Eurodespatch</fullName>
            </value>
            <value>
                <fullName>Urgent Assistance</fullName>
            </value>
            <value>
                <fullName>Covid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>