GearsetPOC/force-app/main/default/objects/Case/fields/Amount_to_be_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Refunded__c</fullName>
    <label>Amount to be Refunded (%)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>