GearsetPOC/force-app/main/default/objects/Case/fields/Ancillary_Products_linked_to_booking__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Products_linked_to_booking__c</fullName>
    <label>Ancillary Products linked to booking</label>
    <length>80</length>
    <type>Text</type>
</CustomField>