GearsetPOC/force-app/main/default/objects/Case/fields/Area_On_Website__c.field-meta.xml
<CustomField>
    <fullName>Area_On_Website__c</fullName>
    <inlineHelpText>Ask the customer which page of the website they were on when they experienced the issue</inlineHelpText>
    <label>Area On Website</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home page</fullName>
            </value>
            <value>
                <fullName>Booking path</fullName>
            </value>
            <value>
                <fullName>Lowest fare finder</fullName>
            </value>
            <value>
                <fullName>Checkout</fullName>
            </value>
            <value>
                <fullName>Availability searches</fullName>
            </value>
            <value>
                <fullName>Exchange path</fullName>
            </value>
            <value>
                <fullName>Extras</fullName>
            </value>
            <value>
                <fullName>MYB</fullName>
            </value>
            <value>
                <fullName>FAQs</fullName>
            </value>
            <value>
                <fullName>Content Pages</fullName>
            </value>
            <value>
                <fullName>Contact Us form</fullName>
            </value>
            <value>
                <fullName>Compensation form</fullName>
            </value>
            <value>
                <fullName>PRR form</fullName>
            </value>
            <value>
                <fullName>AOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>