GearsetPOC/force-app/main/default/objects/Case/fields/Arrival_station__c.field-meta.xml
<CustomField>
    <fullName>Arrival_station__c</fullName>
    <label>Arrival station</label>
    <length>80</length>
    <type>Text</type>
</CustomField>