GearsetPOC/force-app/main/default/objects/Case/fields/Arrival_Station_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Station_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrival Station</label>
    <type>Checkbox</type>
</CustomField>