GearsetPOC/force-app/main/default/objects/Case/fields/Arrival_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_Out__c</fullName>
    <description>Arrival Time of the Outward Journey</description>
    <inlineHelpText>Arrival Time of the Outward Journey</inlineHelpText>
    <label>Arrival Time (Outward)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>