GearsetPOC/force-app/main/default/objects/Case/fields/Arrival_Time_Ret__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_Ret__c</fullName>
    <description>Arrival Time of the Return Journey</description>
    <inlineHelpText>Arrival Time of the Return Journey</inlineHelpText>
    <label>Arrival Time (Return)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>