GearsetPOC/force-app/main/default/objects/Case/fields/Assistance_Package_Price__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Package_Price__c</fullName>
    <label>Assistance Package Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>