GearsetPOC/force-app/main/default/objects/Case/fields/Automated_Icon__c.field-meta.xml
<CustomField>
    <fullName>Automated_Icon__c</fullName>
    <formula>IF(ISPICKVAL(Processing_Type__c, &#39;Automation&#39;) || ISPICKVAL(Processing_Type__c, &#39;Automation - Backlog&#39;) || ISPICKVAL(Processing_Type__c, &#39;Batch&#39;) ,Image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; $Setup.Images__c.Automated_Icon__c,&quot;Automated&quot; ,20,20),
Image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; $Setup.Images__c.Manual_Icon__c,&quot;Manual&quot;,20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automated</label>
    <type>Text</type>
</CustomField>