GearsetPOC/force-app/main/default/objects/Case/fields/Automation__c.field-meta.xml
<CustomField>
    <fullName>Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Processed by Automation</description>
    <label>Automation</label>
    <type>Checkbox</type>
</CustomField>