GearsetPOC/force-app/main/default/objects/Case/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backlog</label>
    <type>Checkbox</type>
</CustomField>