GearsetPOC/force-app/main/default/objects/Case/fields/Bank_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Sort_Code__c</fullName>
    <label>UK Sort Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>