GearsetPOC/force-app/main/default/objects/Case/fields/Booker_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Booker_Company_Name__c</fullName>
    <label>Company/School Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>