GearsetPOC/force-app/main/default/objects/Case/fields/Booker_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Booker_Department_Name__c</fullName>
    <label>Department Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>