GearsetPOC/force-app/main/default/objects/Case/fields/Booker_Interests__c.field-meta.xml
<CustomField>
    <fullName>Booker_Interests__c</fullName>
    <label>I&#39;m interested in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Luggage</fullName>
            </value>
            <value>
                <fullName>Exclusive Carriage</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Half Charter</fullName>
            </value>
            <value>
                <fullName>Exclusive coach</fullName>
                <isActive>false</isActive>
                <label>Exclusive coach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>