GearsetPOC/force-app/main/default/objects/Case/fields/Booking_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Ref_Number__c</fullName>
    <description>Booking Reference number once booking is completed</description>
    <inlineHelpText>Booking Reference number to be entered after booking</inlineHelpText>
    <label>Booking Ref Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>