GearsetPOC/force-app/main/default/objects/Case/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <label>Booking type or Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd party booking</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Assistance animal</fullName>
                <isActive>false</isActive>
                <label>Assistance animal</label>
            </value>
            <value>
                <fullName>Assisted traveller with companion</fullName>
                <isActive>false</isActive>
                <label>Assisted traveller with companion</label>
            </value>
            <value>
                <fullName>Assisted traveller with Guide dog</fullName>
                <isActive>false</isActive>
                <label>Assisted traveller with Guide dog</label>
            </value>
            <value>
                <fullName>Child Add on booking</fullName>
            </value>
            <value>
                <fullName>Choose an option</fullName>
                <isActive>false</isActive>
                <label>Choose an option</label>
            </value>
            <value>
                <fullName>Concession fare</fullName>
            </value>
            <value>
                <fullName>Customer room bookings</fullName>
            </value>
            <value>
                <fullName>General Query</fullName>
            </value>
            <value>
                <fullName>Gift certificate/Prizewinner</fullName>
            </value>
            <value>
                <fullName>Hotel only</fullName>
            </value>
            <value>
                <fullName>Indirect route with points</fullName>
                <isActive>false</isActive>
                <label>Indirect route with points</label>
            </value>
            <value>
                <fullName>Last-Minute</fullName>
            </value>
            <value>
                <fullName>Musical Instrument</fullName>
            </value>
            <value>
                <fullName>Non Eurostar with points</fullName>
                <isActive>false</isActive>
                <label>Non Eurostar with points</label>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Passholder fare</fullName>
            </value>
            <value>
                <fullName>Points Booking</fullName>
            </value>
            <value>
                <fullName>Points Booking (core/direct)</fullName>
                <isActive>false</isActive>
                <label>Points Booking (core/direct)</label>
            </value>
            <value>
                <fullName>Public Booking</fullName>
            </value>
            <value>
                <fullName>Public booking (no points used)</fullName>
                <isActive>false</isActive>
                <label>Public booking (no points used)</label>
            </value>
            <value>
                <fullName>Specialist fare or Promo</fullName>
            </value>
            <value>
                <fullName>Staff travel</fullName>
            </value>
            <value>
                <fullName>Standalone companion</fullName>
                <isActive>false</isActive>
                <label>Standalone companion</label>
            </value>
            <value>
                <fullName>Standalone guide dog</fullName>
                <isActive>false</isActive>
                <label>Standalone guide dog</label>
            </value>
            <value>
                <fullName>Sundry/Ancillary</fullName>
            </value>
            <value>
                <fullName>Trade booking</fullName>
            </value>
            <value>
                <fullName>Wheelchair traveller with or without Companion</fullName>
                <isActive>false</isActive>
                <label>Wheelchair traveller with or without Companion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>