GearsetPOC/force-app/main/default/objects/Case/fields/BSP_ACM_Number__c.field-meta.xml
<CustomField>
    <fullName>BSP_ACM_Number__c</fullName>
    <label>ACM Nº</label>
    <type>TextArea</type>
</CustomField>