GearsetPOC/force-app/main/default/objects/Case/fields/BSP_ACM_Reference__c.field-meta.xml
<CustomField>
    <fullName>BSP_ACM_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACM Reference</label>
    <referenceTo>BSP_ACM__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>