GearsetPOC/force-app/main/default/objects/Case/fields/Call_GUID__c.field-meta.xml
<CustomField>
    <fullName>Call_GUID__c</fullName>
    <label>Call GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>