GearsetPOC/force-app/main/default/objects/Case/fields/Cancellation_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Confirmation__c</fullName>
    <label>***CANCELLED TRAIN INFORMATION***</label>
    <length>1</length>
    <type>Text</type>
</CustomField>