GearsetPOC/force-app/main/default/objects/Case/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <defaultValue>CASE($User.Train_Service__c,
&quot;Red&quot;,&quot;Red&quot;,
&quot;Blue&quot;,&quot;Blue&quot;,
&quot;Purple&quot;)</defaultValue>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>