GearsetPOC/force-app/main/default/objects/Case/fields/Case_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Case_Advocacy__c</fullName>
    <inlineHelpText>Pick the advocacy of the case</inlineHelpText>
    <label>Case Advocacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>