GearsetPOC/force-app/main/default/objects/Case/fields/Case_Age_days__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_days__c</fullName>
    <description>Case age in days</description>
    <formula>NOW()-CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>