GearsetPOC/force-app/main/default/objects/Case/fields/Case_Includes_an_Upsell__c.field-meta.xml
<CustomField>
    <fullName>Case_Includes_an_Upsell__c</fullName>
    <formula>ISNULL(Original_Price_Before_Upsell__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Includes an Upsell</label>
    <type>Checkbox</type>
</CustomField>