GearsetPOC/force-app/main/default/objects/Case/fields/Case_is_not_linked_with_a_customer__c.field-meta.xml
<CustomField>
    <fullName>Case_is_not_linked_with_a_customer__c</fullName>
    <formula>ISBLANK( ContactId )
&amp;&amp;
ISBLANK ( AccountId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case is not linked with a customer</label>
    <type>Checkbox</type>
</CustomField>