GearsetPOC/force-app/main/default/objects/Case/fields/Case_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Manager__c</fullName>
    <label>Case Owner Manager</label>
    <type>Email</type>
</CustomField>