GearsetPOC/force-app/main/default/objects/Case/fields/Case_Priority_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority_Matrix__c</fullName>
    <formula>If (Disruptions_Last_6_Months__c &gt;= 1 &amp;&amp; Disruptions_Last_6_Months__c &lt;= 3, 80, 0) +

If (Disruptions_Last_6_Months__c &gt; 3, 120, 0) +

Days_Since_Created__c +

Keywords__c +

Loyalty_Tier_New__c +

IF(Contact.Sensitive__c = TRUE, 100, 0) +

Travel_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Priority Matrix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>