GearsetPOC/force-app/main/default/objects/Case/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <defaultValue>&quot;Confirmed&quot;</defaultValue>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
                <default>true</default>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>