GearsetPOC/force-app/main/default/objects/Case/fields/Case_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Case_Transferred__c</fullName>
    <label>Case Transferred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>London TravelWatch</fullName>
            </value>
            <value>
                <fullName>Other ADR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>