GearsetPOC/force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Travel</fullName>
            </value>
            <value>
                <fullName>At The Station</fullName>
            </value>
            <value>
                <fullName>Onboard</fullName>
            </value>
            <value>
                <fullName>Post Travel</fullName>
            </value>
            <value>
                <fullName>Webform case - please review</fullName>
            </value>
            <value>
                <fullName>Club Eurostar</fullName>
            </value>
            <value>
                <fullName>Phone Case - please complete</fullName>
            </value>
            <value>
                <fullName>System - please review</fullName>
            </value>
            <value>
                <fullName>Document request</fullName>
            </value>
            <value>
                <fullName>Subscriptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>