GearsetPOC/force-app/main/default/objects/Case/fields/Catering_Business_Lounge_Issues__c.field-meta.xml
<CustomField>
    <fullName>Catering_Business_Lounge_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if the main reason for contact was not related to Catering and/or the Business Lounge but the customer has still raised an issue about either of them</inlineHelpText>
    <label>Catering / Business Lounge Issue</label>
    <type>Checkbox</type>
</CustomField>