GearsetPOC/force-app/main/default/objects/Case/fields/Child1_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Child1_Date_of_Birth__c</fullName>
    <description>Child1- Date of Birth</description>
    <label>Date of Birth</label>
    <length>15</length>
    <type>Text</type>
</CustomField>