GearsetPOC/force-app/main/default/objects/Case/fields/Child1_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Child1_Last_Name__c</fullName>
    <description>Child 1 Last name</description>
    <label>Child Last Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>