GearsetPOC/force-app/main/default/objects/Case/fields/Child1Gender__c.field-meta.xml
<CustomField>
    <fullName>Child1Gender__c</fullName>
    <description>Child 1 gender</description>
    <label>Gender</label>
    <length>7</length>
    <type>Text</type>
</CustomField>