GearsetPOC/force-app/main/default/objects/Case/fields/Child_Wheel_Chair_User__c.field-meta.xml
<CustomField>
    <fullName>Child_Wheel_Chair_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Junior Traveler wheel chair user</description>
    <label>Wheel Chair User?</label>
    <type>Checkbox</type>
</CustomField>