GearsetPOC/force-app/main/default/objects/Case/fields/Claim_Date_COVID__c.field-meta.xml
<CustomField>
    <fullName>Claim_Date_COVID__c</fullName>
    <label>Claim Date COVID</label>
    <type>DateTime</type>
</CustomField>