GearsetPOC/force-app/main/default/objects/Case/fields/Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Service__c</fullName>
    <label>Class of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Premier</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Business Premier</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>