GearsetPOC/force-app/main/default/objects/Case/fields/Class_of_service_journey_outbound__c.field-meta.xml
<CustomField>
    <fullName>Class_of_service_journey_outbound__c</fullName>
    <label>Class of service journey outbound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>