GearsetPOC/force-app/main/default/objects/Case/fields/Class_Outward_Journey__c.field-meta.xml
<CustomField>
    <fullName>Class_Outward_Journey__c</fullName>
    <description>Class of the Outward Journey</description>
    <inlineHelpText>Class of the Outward Journey</inlineHelpText>
    <label>Class (Outward)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard Premier</fullName>
            </value>
            <value>
                <fullName>Business Premier</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>